# pykhfunniest

./: .gitignore  README.html  README.md  README.rst  pyproject.toml
.github/workflows/: ci.yml
pykhfunniest/: __init__.py  __main__.py  tell_joke.py
tests/: test_get_joke_nr.py
