[tool.poetry]
name = "pykhfunniest"
version = "1.0.0"
description = ""
authors = ["khaz <pykhaz@o2.pl>"]
readme = "README.rst"

[tool.poetry.publish]
repository = "testpypi"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
