[tool.poetry]
name = "pykhfunniest"
version = "1.0.0"
description = "A small application for learning the packaging of a Python project."
authors = ["khaz <pykhaz@o2.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.7.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

